* 2-3-stable *

* Allow unicode conditions strings to be quoted correctly. Like 3.0 branch. [Ken Collins]

* Simplify encoding support. [Ken Collins]

* Add binary timestamp datatype handling. [Erik Bryn]


* 2.3.11

* Add TinyTds/dblib connection mode. [Ken Collins]


* 2.3.10

* Fix DSN'less code. [Erik Bryn]


* 2.3.9

* Support DSN'less connections. Resolves ticket 38. 

* Support upcoming ruby odbc 0.99992

* Include new raw connection interfaces developed and optimized under the 3.0 branch.

* The remove_column conforms to ArgumentError exceptions. [Ken Collins]

* Add support for default function values in schema reflection. Allows for uniqueidentifier default 
values like NEWID(). These are not automatically inserted into the INSERT statement as of yet, that 
could be done user side on a before save callback now. Includes new #newid_function and 
#newsequentialid_function on the connection for helping. Resolves tikcet #42. [Ken Collins]


* 2.3.8

* Properly quote all database names in rake helper methods. [Ken Collins]


* 2.3.7

* Correctly use :date/:time SQL types in 2008 [Ken Collins]


* 2.3.6

* Allow DNS's to not contain a database and use what is in database.yml [Marco Mastrodonato]

* Rake tasks methods for vanallia rails :db namespace parity. [Ken Collins]

* IronRuby integrated security fixes [Jimmy Schementi]


* 2.3.5

* Initial IronRuby ADONET connection mode support baked right in. Removed most &block 
  parameters, no handle/request object yielded anymore. Better abstraction and compliance 
  per the ActiveRecord abstract adapter to not yielding handles for #execute and only for 
  low level #select. Better wrapping of all queries at lowest level in #log so exceptions 
  at anytime can be handled correctly by core AR. Critical for System::Data's command 
  readers. Better abstraction for introspecting on #connection_mode. Added support for 
  running singular test cases via TextMate's Command-R. [Ken Collins]
  